--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "mongoose": "^5.11.10",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.4.17",
-    "socket.io": "^3.1.0"
+    "nodemailer": "^6.4.17"
   }
 }
